<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletenniszed</name>
  <version>1.0.0</version>
  <description>
    Real-time table tennis ball prediction and hit planning using ZED camera.
    Refactored from Python/ROS1 to C++17/ROS2.
  </description>

  <maintainer email="user@example.com">Table Tennis Zed</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime/build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- System dependencies -->
  <build_depend>eigen3</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
